# dentalpin

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATORS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.md  README.es.md  README.fr.md  README.md  TODOS.md  docker-compose.coolify.yml  docker-compose.yml  proyecto_open_source_dental.docx
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_initial.py  0002_clinic_timezone.py  0003_agents_core.py  0004_clinic_legal_name.py  0005_clinic_currency.py  74c032298f5f_initial_migration.py  9ac13662ae08_add_patient_billing_fields.py  a1b2c3d4e5f6_add_catalog_module.py  b2c3d4e5f6a7_add_catalog_item_to_treatments.py  b8c9d4e5f6a7_add_odontogram_tables.py  c3d4e5f6a7b8_add_vat_types.py  c9d0e5f6a7b8_add_tooth_treatments.py  d0e1f2a3b4c5_add_soft_delete_to_treatments.py  d4e5f6a7b8c9_add_budget_module.py  e1f2a3b4c5d6_simplify_treatment_status.py  e5f6a7b8c9d0_add_notifications_module.py  f2a3b4c5d6e7_treatment_categories_refactor.py  f6g7h8i9j0k1_add_clinic_smtp_settings.py  g7h8i9j0k1l2_add_billing_module.py  h8i9j0k1l2m3_invoice_number_on_issue.py  i9j0k1l2m3n4_simplify_budget_status.py  j0k1l2m3n4o5_nullable_billing_name_for_drafts.py  k1l2m3n4o5p6_add_appointment_treatments.py  l2m3n4o5p6q7_add_patient_extended_fields.py  m3n4o5p6q7r8_add_invoice_series_history.py  n4o5p6q7r8s9_add_legal_guardian_field.py  o5p6q7r8s9t0_add_documents_table.py  p6q7r8s9t0u1_add_treatment_plan_module.py  q7r8s9t0u1v2_add_treatment_group_id.py  r8s9t0u1v2w3_treatment_header_children_refactor.py  s9t0u1v2w3x4_add_surface_prices_to_catalog.py  t0u1v2w3x4y5_add_scope_arch_to_treatments.py  u1v2w3x4y5z6_add_core_module_tables.py  v2w3x4y5z6a7_add_cabinets_table.py  w3x4y5z6a7b8_add_patients_clinical_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/cli/: __init__.py  __main__.py  modules.py
backend/app/core/: list_query.py  scheduler.py  scheduling.py  schemas.py
backend/app/core/agents/: __init__.py  base.py  context.py  guardrails.py  memory.py  models.py  orchestrator.py  router.py  schemas.py  service.py
backend/app/core/auth/: __init__.py  dependencies.py  models.py  permissions.py  router.py  schemas.py  service.py
backend/app/core/email/: __init__.py  encryption.py  service.py
backend/app/core/events/: __init__.py  bus.py  types.py
backend/app/core/llm/: openai_provider.py
backend/app/core/plugins/: README.md  __init__.py  alembic_paths.py  base.py  context.py  db_models.py  external_id.py  frontend_layers.py  loader.py  manifest.py  manifest_validator.py  operation_log.py  processor.py  registry.py  router.py  service.py  state.py  topology.py  yaml_loader.py
backend/app/core/tenancy/: __init__.py  context.py  single.py  (+1 more)
backend/app/seeds/: __init__.py  demo_data.py
backend/scripts/: backfill_verifactu_severity.py  check_docs_coverage.py  generate_catalogs.py  scaffold_module_docs.py  seed_demo.py
backend/templates/email/: base.html
backend/tests/: __init__.py  conftest.py  test_agents_approval.py  test_agents_guardrails.py  test_agents_registry.py  test_alembic_branches.py  test_alembic_roundtrip.py  test_appointment_cabinet_lifecycle.py  test_appointment_status_history.py  test_appointment_transitions.py  test_auth.py  test_auth_create_user_scope.py  test_budget.py  test_catalog.py  test_catalog_generator.py  test_catalog_seed.py  test_cli_modules.py  test_clinical.py  test_clinical_notes.py  test_clinics_and_core_flows.py  test_copilot_digest.py  test_copilot_metrics.py  test_copilot_nudges.py  test_copilot_pending.py  test_currency.py  test_e2e_community_install.py  test_frontend_layers.py  test_kanban_day_endpoint.py  test_llm_orchestrator.py  test_manifest_validator.py  test_media.py  test_media_attachments.py  test_media_photos.py  test_module_docs.py  test_module_external_id.py  test_module_fk_isolation.py  test_module_install_flow.py  test_module_isolation.py  test_module_loader.py  test_module_manifest.py  (+28 more)
backend/tests/fixtures/: __init__.py
(+1284 files in other folders)
