[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dentalpin"
version = "0.1.0"
description = "Open source dental clinic management software"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.entry-points."dentalpin.modules"]
clinical = "app.modules.clinical:ClinicalModule"
catalog = "app.modules.catalog:CatalogModule"
budget = "app.modules.budget:BudgetModule"
billing = "app.modules.billing:BillingModule"
odontogram = "app.modules.odontogram:OdontogramModule"
treatment_plan = "app.modules.treatment_plan:TreatmentPlanModule"
media = "app.modules.media:MediaModule"
notifications = "app.modules.notifications:NotificationsModule"
reports = "app.modules.reports:ReportsModule"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
